nueva parada casi listo
se han añadido links para alimentar las funciones relacionadas con las paradas y se han comentado la mayoria de console.log(). este corresponde con el git del mismo nombre en front granja
